--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-
-    <link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection"/>
-
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8" http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+    <title>Emotify</title>
+    <base href="/">
 </head>
 
 <body>
@@ -183,14 +181,14 @@
                 <p class="grey-text text-lighten-4">We are friends who want to make people use emoticons.</p>
                 <div class="row">
                     <div class="col m4 offset-m1 center-align">
-                        <img src="img/rk.jpg" alt=""
+                        <img src="assets/img/rk.jpg" alt=""
                              class="circle responsive-img profile-pic">
                         Rajanikant
                         <a href="mailto:rk@emotify.io" class="grey-text text-lighten-3 center">rk@emotify.io</a>
                     </div>
 
                     <div class="col m4 offset-m1 center-align">
-                        <img src="img/shailesh.jpg" alt=""
+                        <img src="assets/img/shailesh.jpg" alt=""
                              class="circle responsive-img profile-pic">
                         Shailesh
                         <a href="mailto:shailesh@emotify.io"
@@ -218,8 +216,7 @@
     </div>
 </footer>
 
-<!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </body>
 </html>
