Add redirection code

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        if (window.location.hostname !== "emotify-io.web.app" || window.location.hostname !== "emotify-io.firebaseapp.com") {
+            window.location.hostname = "beta.emotify.io";
+        }
+    </script>
     <!-- Google Icons/Fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|VT323&display=swap" rel="stylesheet">
