Fix redirection code

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script>
-        if (window.location.hostname !== "emotify-io.web.app" || window.location.hostname !== "emotify-io.firebaseapp.com") {
+        if (window.location.hostname === "emotify-io.web.app" || window.location.hostname === "emotify-io.firebaseapp.com") {
             window.location.hostname = "beta.emotify.io";
         }
     </script>
